--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,8 +1,23 @@
 {
-  "Profile_Details": "Информация о профиле",
-  "Name": "Имя",
-  "Surname": "Фамилия",
-  "Patronymic": "Отчетство",
-  "Position": "Должность",
-  "Subdivision": "Подразделение"
+  "PROFILE_DETAILS": "Информация о профиле",
+  "NAME": "Имя",
+  "SURNAME": "Фамилия",
+  "PATRONYMIC": "Отчетство",
+  "POSITION": "Должность",
+  "SUBDIVISION": "Подразделение",
+  "ID": "ID",
+  "DATE_OF_CREATE": "Дата создания",
+  "CODE": "Код",
+  "EDIT": "Редактировать",
+  "DELETE": "Удалить",
+  "BACK": "Назад",
+  "USERS": "Пользователи",
+  "PARTNER": "Партнеры",
+  "BANK": "Клиенты банка",
+  "GENERAL": "Общие",
+  "STATUS": "Статус",
+  "GROUPS": "Группы",
+  "ADD": "Добавить",
+  "CHANGE": "Изменить",
+  "DETAILS": "Информация о {{name}}"
 }
