commit 6 working http rest + in memory data service + tree + table css added translate pipe added menu for languages added switcher for "edit"/"save" need to add cancel

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,5 +19,6 @@
   "GROUPS": "Groups",
   "ADD": "Add",
   "CHANGE": "Change",
-  "DETAILS": "{{name}} Details"
+  "DETAILS": "{{name}} Details",
+  "SAVE": "Save changes"
 }
