--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -19,5 +19,6 @@
   "GROUPS": "Группы",
   "ADD": "Добавить",
   "CHANGE": "Изменить",
-  "DETAILS": "Информация о {{name}}"
+  "DETAILS": "Информация о {{name}}",
+  "SAVE": "Сохранить изменения"
 }
