commit 7 working http rest + in memory data service + tree + table css added translate pipe added menu for languages added switcher for "edit"/"save" added "cancel" added search, need to do beter style added "add" component, need to work with logic for add() on TS

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -20,5 +20,6 @@
   "ADD": "Add",
   "CHANGE": "Change",
   "DETAILS": "{{name}} Details",
-  "SAVE": "Save changes"
+  "SAVE": "Save changes",
+  "CANCEL": "Cancel"
 }
