--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -20,5 +20,6 @@
   "ADD": "Добавить",
   "CHANGE": "Изменить",
   "DETAILS": "Информация о {{name}}",
-  "SAVE": "Сохранить изменения"
+  "SAVE": "Сохранить изменения",
+  "CANCEL": "Отмена"
 }
