commit 8 working http rest + in memory data service + tree + table css added translate pipe added menu for languages added switcher for "edit"/"save" added "cancel" added search, need to do better style added "add" component, need to work with logic for add() on TS doing logic with add()

--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -21,5 +21,6 @@
   "CHANGE": "Изменить",
   "DETAILS": "Информация о {{name}}",
   "SAVE": "Сохранить изменения",
-  "CANCEL": "Отмена"
+  "CANCEL": "Отмена",
+  "NEW_OBJECT": "Создать новый объект"
 }
