--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -21,5 +21,6 @@
   "CHANGE": "Change",
   "DETAILS": "{{name}} Details",
   "SAVE": "Save changes",
-  "CANCEL": "Cancel"
+  "CANCEL": "Cancel",
+  "NEW_OBJECT": "Add new object"
 }
