commit 8 working http rest + in memory data service + tree + table css added translate pipe added menu for languages added switcher for "edit"/"save" added "cancel" added search, need to do better style added "add" component, need to work with logic for add() on TS doing logic with add()

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,5 +22,6 @@
   "DETAILS": "{{name}} Details",
   "SAVE": "Save changes",
   "CANCEL": "Cancel",
-  "NEW_OBJECT": "Add new object"
+  "NEW_OBJECT": "Add new object",
+  "PROFILE": "Profile"
 }
