--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -22,5 +22,6 @@
   "DETAILS": "Информация о {{name}}",
   "SAVE": "Сохранить изменения",
   "CANCEL": "Отмена",
-  "NEW_OBJECT": "Создать новый объект"
+  "NEW_OBJECT": "Создать новый объект",
+  "PROFILE": "Профиль"
 }
